--- a/src/App.css
+++ b/src/App.css
@@ -52,12 +52,19 @@ h2 {
 }
 
 .small-images {
-height: 100px;
+height: 80px;
 width: 100px;
 }
 
 .kast {
   display:flex;
-  justify-content: space-evenly;
+  align-items: center;
+  justify-content:space-evenly;
   background-color: white;
+  border: 2px solid ;
+  
+}
+
+.horz-line {
+  text-decoration: underline;
 }
