--- a/src/App.css
+++ b/src/App.css
@@ -51,20 +51,33 @@ h2 {
   font-style: normal;
 }
 
-.small-images {
-height: 80px;
-width: 100px;
+.kast div img{
+height: 100px;
+width: 200px;
+
 }
 
 .kast {
   display:flex;
   align-items: center;
   justify-content:space-evenly;
-  background-color: white;
-  border: 2px solid ;
+
   
 }
 
+.kast div {
+  background-color: white;
+  border: 2px solid ;
+  padding: 20px;
+}
 .horz-line {
-  text-decoration: underline;
+  margin-left: 40%;
+  margin-right: 40%;
+  height:50px;
+  
+  
+}
+
+.kast p {
+  font-size: 14px;
 }
